fix(ssa,tiac): fix alignment of with_free_links filter on SSA + TIAC

--- a/ssa/static/ssa/evenement_produit_list.css
+++ b/ssa/static/ssa/evenement_produit_list.css
@@ -22,7 +22,7 @@
 }
 
 .with_free_links .fr-checkbox-group {
-    margin-bottom: 0 !important;
+    margin-bottom: 0.5rem !important;
 }
 
 .choices {
