--- a/tiac/static/tiac/list.css
+++ b/tiac/static/tiac/list.css
@@ -1,6 +1,6 @@
 .evenements_liste__search-form .fr-checkbox-group {
     margin-top: auto;
-    margin-bottom: auto !important;
+    margin-bottom: 0.5rem !important;
 }
 
 .fr-input-group {
